api + server for service account
